[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/d3.png" type="Texture" id=1]
[ext_resource path="res://images/d2.png" type="Texture" id=2]
[ext_resource path="res://images/d1.png" type="Texture" id=3]
[ext_resource path="res://script/fish.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "moving",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.0
height = 76.0

[node name="Fish" type="RigidBody2D"]
position = Vector2( 186, 113 )
collision_mask = 0
input_pickable = true
gravity_scale = 0.0
linear_damp = 0.0
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 1 )
animation = "moving"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -0.999996 )
shape = SubResource( 2 )

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.08

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_Fish_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_fish_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Fish_mouse_exited"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
